HomePage banner spacing fixes

--- a/src/components/BackGroundVideo/BackGroundVideo.scss
+++ b/src/components/BackGroundVideo/BackGroundVideo.scss
@@ -292,3 +292,10 @@
   //}
 
 }
+
+.videoBottom{
+    margin-bottom: 6rem;
+    position: relative;
+    height: 100%;
+    overflow: hidden;
+}
